# research_agent

./: README.md  main_head.js
research_assistant/: .env.example  API_CLI_USAGE.md  README.md  check_ollama.py  final_research.md  fix_env.py  pyproject.toml
research_assistant/Research/: critical_analysis.md  fact_check.md  final_research.md  research_cheddar_20251222_161423.md  research_future_ai_jobs_market_20251208_215533.md  research_generative_ai_hardware_trends_2026_20251222_134138.md  research_is_the_earth_flat_test_of_critical_analysis_20251222_151737.md  research_quantum_computing_hardware_trends_2026_20251222_113810.md
research_assistant/chroma_db/: chroma.sqlite3
research_assistant/outputs/: analysis.md  critical_analysis.md  draft.md  fact_check.md  publishing.md  research_2025_test_market_budget_projections.md  research_3nm_ai_chip_yield_optimization_techniques.md  research_advancements_in_ai_ethics_and_responsible_developm.md  research_advancements_in_large_language_models__llms__as_of.md  research_advancements_in_quantum_networking_and_communicati.md  research_agi__artificial_general_intelligence__development_.md  research_ai___machine_learning_research_topics.md  research_ai___machine_learning_research_topics_in_emerging_.md  research_ai_adoption_2025.md  research_ai_adoption_by_industry_2025.md  research_ai_adoption_statistics_2025.md  research_ai_adoption_trends_by_industry_2025_2026_pdf.md  research_ai_adoption_trends_by_industry_2025_2026_usa.md  research_ai_adoption_trends_by_industry__2025_2026.md  research_ai_bias_mitigation_in_healthcare_ai_systems_by_202.md  research_ai_ethics_and_governance.md  (+292 more)
(+24 files in other folders)
