[project]
name = "research_assistant"
version = "0.1.0"
description = "Research_Assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0",
    "litellm",
    "ollama",
    "flask"
]

[project.scripts]
research_assistant = "research_assistant.main:run"
run_crew = "research_assistant.main:run"
train = "research_assistant.main:train"
replay = "research_assistant.main:replay"
test = "research_assistant.main:test"
run_with_trigger = "research_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
